# MultiSense-UAV-Detection

./: .gitignore  README.md  requirements.txt
interceptor/: README.md  requirements.txt
interceptor/src/bringup/: CMakeLists.txt  package.xml
interceptor/src/bringup/launch/: main.launch.py  test.launch.py
interceptor/src/perception/detection/yolov10/: package.xml  setup.cfg  setup.py
interceptor/src/perception/detection/yolov8/: package.xml  setup.py
interceptor/src/perception/detection/yolov8/yolov8/: detection_yolov8_node.py
interceptor/src/sensors/camera/cdriver/: package.xml  setup.cfg  setup.py
interceptor/src/sensors/camera/cdriver/cdriver/: camera_driver_node.py  image_from_camera_node.py  image_from_folder_node.py  image_offline_node.py
interceptor/src/sensors/camera/cdriver/config/: image_from_folder_node.yaml
interceptor/src/sensors/camera/cdriver/launch/: image_from_folder.launch.py
interceptor/src/sensors/gps/gdriver/: package.xml  setup.cfg  setup.py
interceptor/src/sensors/gps/gdriver/gdriver/: node_nmea.py  utils.py
interceptor/src/sensors/radar/rdriver/: package.xml  setup.cfg  setup.py
interceptor/src/sensors/radar/rdriver/rdriver/: frame_from_folder_node.py  frame_offline_node.py
interceptor/utils/: Parsing of ArduPilot .bin Flight Data.py
matlab/: draw_bboxes_on_raw_images.m  video_from_timestamped_frames.m
matlab/Radar_RangeEstimation_KalmanFilter/: Clutter_rejection.m  Radar_RangeEstimation_KalmanFilter.m  compensatePathloss_dB.m  movmean2d.m  range_estimates.csv
mydocs/: mkdocs.yml
mydocs/docs/: quickstart.md
